k8s-config/policies/add-as-non-root-user.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: add-non-root-user

spec:
  rules:
    - name: add-non-root-user
      match:
        resources:
          kinds:
            - Pod
      mutate:
        patchStrategicMerge:
          spec:
            securityContext:
              runAsNonRoot: true
